# tensorflow_cc

./: install-bazel.sh
example/: CMakeLists.txt
tensorflow_cc/: CMakeLists.txt
tensorflow_cc/cmake/: TensorflowCCConfig.cmake.in  build_tensorflow.sh.in  config.cmake.in  copy_links.sh  packaging.cmake
